<resources>
    <string name="app_name">Vehicle Maintenance Tracker</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main_vehicle">MainVehicleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vehicle_label">Vehicle</string>
    <string name="title_activity_main">Vehicle Maintenance Tracker</string>
    <string name="tab_text_dashboard">Dashboard</string>
    <string name="tab_text_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mileage_label">Mileage:</string>
    <string name="average_label">You average</string>
    <string name="reported_label">Reported:</string>
    <string name="mileage_average_label">miles per year</string>
    <string name="button_report_mileage">Mileage</string>
    <string name="service_notification_label">Service Notifications</string>
    <string name="button_enter_service">Service</string>
    <string name="title_activity_mileage">Mileage</string>
    <string name="enter_mileage_label">Enter Mileage:</string>
    <string name="effective_date_label">Effective Date:</string>
    <string name="last_mileage_label">Previous Mileage:</string>
    <string name="submit_label">Submit</string>
    <string name="last_mileage_entered_label">Last mileage reported was %1$s on %2$s</string>
    <string name="validation_error_unhandled">Unhandled validation error</string>
    <string name="validation_required_field">Field may not be empty</string>
    <string name="validation_invalid_date">Date is invalid</string>
    <string name="validation_invalid_mileage">Mileage is invalid</string>
    <string name="title_activity_vehicle_selection">VehicleSelectionActivity</string>
    <string name="year_label">Year</string>
    <string name="make_label">Make</string>
    <string name="model_label">Model</string>
    <string name="button_select_vehicle">Submit</string>
    <string name="no_vehicle_selected">No vehicle selected</string>
    <string name="maintenance_performed_label">Maintenance Performed:</string>
    <string name="date_performed_label">Date Performed:</string>
    <string name="provider_label">Provider:</string>
    <string name="cost_label">Cost:</string>
    <string name="start_mileage_label">Starting Mileage:</string>
    <string name="start_date_label">Starting Date:</string>
    <string name="date_col_label">Date</string>
    <string name="mileage_col_label">Mileage</string>
    <string name="service_col_label">Service</string>
    <string name="cost_col_label">Cost</string>
    <string name="history_total_label">Total:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="settings_text">Settings</string>
    <string name="service_overdue">Service Overdue</string>
    <string name="service_upcoming">Service Upcoming</string>
    <string name="app_widget_title">Vehicle Maintenance</string>
    <string name="vehicle_select_summary">Please choose your vehicle.  Note that the free version of this app only supports managing a single vehicle.  Purchase the pro version to manage multiple vehicles.</string>
    <string name="starting_info_text">The starting date and mileage represent when you purchased the vehicle, and its maintenance is considered to be up to date.</string>
    <string name="vehicle_submit_info">Warning!  Clicking submit will erase any previously saved vehicle maintenance and mileage data.</string>
    <string name="maintenance_up_to_date">Congratulations, your vehicle\'s maintenance is up to date!</string>
    <string name="status_content_description">Status</string>
    <string name="ad_app_id">ca-app-pub-5550468670492636~7551878388</string>
    <string name="ad_unit_id">ca-app-pub-5550468670492636/2271631541</string>
    <string name="ad_unit_id_test_ads">ca-app-pub-3940256099942544/6300978111</string>
    <string name="vehicle_name_label">Name:</string>
    <string name="vehicle_description_label">Description:</string>
    <string name="mileage_menu_label">Mileage</string>
    <string name="maintenance_menu_label">Maintenance</string>
    <string name="settings_menu_label">Settings</string>
    <string name="dashboard_menu_label">Dashboard</string>
    <string name="history_menu_label">Maintenance History</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_maintenance_history">Maintenance History</string>
    <string name="nav_drawer_example">Vehicle Maintenance Tracker</string>
    <string name="no_vehicle_defined">No vehicle defined</string>
</resources>
